# LMD-Alignment

./: .gitignore  .gitmodules  2.json  DPGdifference1Dcut2Dcut.py  DPGhist2Ddist.py  README.md  alMat-aligned.json  alMat-modules-1.0.json  alMat-modules-singlePlane.json  alignCampaign.ipynb  alignCampaignIP.ipynb  alignCampaignModules.ipynb  alignCampaignSensors.ipynb  alignCampaignSensorsNewGeometry.ipynb  alignerCampaignModules.ipynb  comparePythonAndRoot.py  copyBox100forIPstudy  data.json  genSenToSectorLut.ipynb  generateMisalignmentMatrices.ipynb  getIPfromTrksQA.py  histForDPG.py  icp.py  misMat-modulesNoRot-1.00.json  plotTrackDirectionCuts.py  readIPs.py  readme.md  requirements.txt  results-modAlign-avgKnown.json  results-modAlign-avgNotKnown.json  runAlignment.py  runSimulations.py  setup.cfg  shitlist.sh  simIdentity.sh  simWrapper.py  test  testICP.py  warpSimulations.py
DEPRECATED/: README.md
DPG/: DPGhist2Ddist.py
alignIP/: alignIP.py  getBoxRotMatrix.py  matrices.py  trksQA.py
alignment/: alignCorridors.py  alignIP.py  alignSensors.py  alignerCorridors.py  alignerIP.py  alignerModules.py  alignerSensors.py
alignment/modules/: CMakeLists.txt  MillePythonInterface.cpp  Readme.rst  convertMergedHits.C  convertRootTracks.C  sectorContainer.py  setup.py  trackFitter.py  trackReader.py
config/: detectorMatricesIdeal.json  moduleIDtoSectorID.json  sensorIDtoSectorID.json
detail/: LMDRunConfig.py  LMDpaths.py  LumiValLaTeXTable.py  getIPfromTrksQA.py  getTrackRecStatus.py  hitPairSorter.py  icp.py  logger.py  matrices.py  matrixComparator.py  trksQA.py  (+5 more)
(+469 files in other folders)
